Make `pre` elements handle overflow correctly

--- a/_sass/theme/_code.scss
+++ b/_sass/theme/_code.scss
@@ -1,3 +1,7 @@
+pre {
+  overflow-x: auto;
+}
+
 code {
   background-color: $code-background-color;
 }
